MDEV-37121   Change buffer freed pages are not removed during slow shutdown

Problem:
=======
- During slow shutdown, expectation is that change buffer index to
merge all the change buffer pages and free all the change
buffer pages except root. But InnoDB fails to free the
freed change buffer pages from segment and returns it to
system tablespace.

Solution:
=========
- During slow shutdown, remove all pages from free list of change
buffer and frees it to system tablespace