storage/innobase/ibuf/ibuf0ibuf.cc
@@ -1855,12 +1855,17 @@ corrupted:
 	return true;
 }
 
-/*********************************************************************//**
-Removes a page from the free list and frees it to the fsp system. */
-static void ibuf_remove_free_page()
+/** Removes a page from the free list and frees it to the fsp system.
+@param all Free all freed page. This should be useful only during slow
+shutdown
+@retval DB_SUCCESS_LOCKED_REC if all free pages are freed
+@retval DB_SUCCESS if page is freed
+@retval error code otherwise */
+static dberr_t ibuf_remove_free_page(bool all = false)
 {
 	mtr_t	mtr;
 	page_t*	header_page;
+	dberr_t err = DB_SUCCESS;
 
 	log_free_check();
 
@@ -1876,19 +1881,27 @@ static void ibuf_remove_free_page()
 	mysql_mutex_lock(&ibuf_pessimistic_insert_mutex);
 	mysql_mutex_lock(&ibuf_mutex);
 
-	if (!header_page || !ibuf_data_too_much_free()) {
+	if (!header_page || (!all && !ibuf_data_too_much_free())) {
 early_exit:
 		mysql_mutex_unlock(&ibuf_mutex);
 		mysql_mutex_unlock(&ibuf_pessimistic_insert_mutex);
 
 		ibuf_mtr_commit(&mtr);
 
-		return;
+		return err;
 	}
 
 	buf_block_t* root = ibuf_tree_root_get(&mtr);
 
 	if (UNIV_UNLIKELY(!root)) {
+		goto early_exit;
+	}
+
+        /* If all the freed pages are removed during slow shutdown
+        then exit early with DB_SUCCESS_LOCKED_REC */
+	if (all && flst_get_len(PAGE_HEADER + PAGE_BTR_IBUF_FREE_LIST +
+				root->page.frame) == 0) {
+		err = DB_SUCCESS_LOCKED_REC;
 		goto early_exit;
 	}
 
@@ -1919,7 +1932,7 @@ early_exit:
 	compile_time_assert(IBUF_SPACE_ID == 0);
 	const page_id_t	page_id{IBUF_SPACE_ID, page_no};
 	buf_block_t* bitmap_page = nullptr;
-	dberr_t err = fseg_free_page(
+	err = fseg_free_page(
 		header_page + IBUF_HEADER + IBUF_TREE_SEG_HEADER,
 		fil_system.sys_space, page_no, &mtr);
 
@@ -1965,6 +1978,7 @@ func_exit:
 	}
 
 	ibuf_mtr_commit(&mtr);
+	return err;
 }
 
 /***********************************************************************//**
@@ -2433,7 +2447,9 @@ ATTRIBUTE_COLD ulint ibuf_contract()
 		      == page_id_t(IBUF_SPACE_ID, FSP_IBUF_TREE_ROOT_PAGE_NO));
 
 		ibuf_mtr_commit(&mtr);
-
+		/* Remove all free page from free list and
+		frees it to system tablespace */
+		while (ibuf_remove_free_page(true) == DB_SUCCESS);
 		return(0);
 	}
 
